2008-06-06  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Remove previous bin_script_path in case
	it is a symlink.
	* lib/rubygems/commands/pristine_command.rb:  Force reinstallation of
	the gem using the installer.  Fixes bug #20387 by Erik Persson.
	* lib/rubygems/doc_manager.rb:  Ensure args to RDoc are all strings.
	* lib/rubygems/source_index.rb:  Use find_matching to discover updated
	specs instead of fetch.
	* lib/rubygems/commands/query_command.rb:  Platform, not name in spec
	tuples.

2008-06-05  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  Ensure remote repository URLs
	reference directories.  Fixes bug #20134 by Neil Wilson.
	* lib/rubygems/source_index.rb:  Gracefully handle ^C or explicit exit
	while loading .gemspec files from disk.  Fixes bug #20523 by Joel
	VanderWerf.
	* lib/rubygems/specification.rb:  Use File#expand_path in
	installation_path.  Fixes bug #19317 by Hemant Kumar.
	* lib/rubygems/spec_fetcher.rb:  Fix legacy test against URI.
	* lib/rubygems/remote_fetcher.rb:  Always raise FetchError from
	RemoteFetcher.  Fix FetchErrors without URIs.  Refactor Net::HTTP
	request code to use persistent connections for HEAD requests.  Feature
	Request #7973 by Christian Schachtzabel.
	* lib/rubygems.rb:  Don't load custom_require until after the OS and
	implementation have had a chance to set paths.

2008-06-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/source_index.rb:  Only fetch specs we need in
	#outdated.
	* lib/rubygems.rb:  Fix typo in ::activate exception.
	* lib/rubygems/dependency.rb:  For #to_s, display dependency type when
	nil.
	* lib/rubygems/dependency_installer.rb:  Reset #installed_gems for
	every #install.  Fixes bug #19444 by Glenn Rempe.
	* lib/rubygems/installer.rb:  Don't re-read the disk to check for new
	gems, add them by hand on install.

2008-06-03  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Add ::gzip, ::gunzip, ::deflate and ::inflate.